// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The FootballNotificationsLambda stack matches the snapshot for CODE 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "mobile-notifications-football",
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "App": {
      "Default": "football",
      "Description": "Application name",
      "Type": "String",
    },
    "DeployBucket": {
      "Default": "mobile-dist",
      "Description": "Bucket where RiffRaff uploads artifacts on deploy",
      "Type": "String",
    },
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "DynamoNotificationTopic": {
      "Description": "SNS topic to notify when there's a dynamo throttling event",
      "Type": "String",
    },
    "Stack": {
      "Default": "mobile-notifications",
      "Description": "Stack name",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Default": "CODE",
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": {
    "DynamoTable": {
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "notificationId",
            "AttributeType": "S",
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "notificationId",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 3,
          "WriteCapacityUnits": 3,
        },
        "TableName": {
          "Fn::Sub": "\${Stack}-\${App}-notifications-\${Stage}",
        },
        "Tags": [
          {
            "Key": "devx-backup-enabled",
            "Value": "true",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
    },
    "ErrorEventMetricFilter9872E3AE": {
      "Properties": {
        "FilterPattern": "Error",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballnotificationslambdaLambda45CD1697",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "error",
            "MetricNamespace": "CODE/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "GoalEventMetricFilterAD6B9DEF": {
      "Properties": {
        "FilterPattern": "successfully sent",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballnotificationslambdaLambda45CD1697",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "goal-success",
            "MetricNamespace": "CODE/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "MobileNotificationsFootballConsumedReadThrottleEvents9A50CD73": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":dynamodb",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if DynamoDB ReadThrottleEvents >= 10 in 5 minutes",
        "AlarmName": "MobileNotificationsFootballConsumedReadThrottleEvents",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": "mobile-notifications-football-notifications-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ReadThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MobileNotificationsFootballConsumedWriteThrottleEventsC10BA6FC": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":dynamodb",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if DynamoDB WriteThrottleEvents >= 10 in 5 minutes",
        "AlarmName": "MobileNotificationsFootballConsumedWriteThrottleEvents",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": "mobile-notifications-football-notifications-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "WriteThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "footballnotificationslambdaLambda45CD1697": {
      "DependsOn": [
        "footballnotificationslambdaLambdaServiceRoleDefaultPolicyC7DC4E99",
        "footballnotificationslambdaLambdaServiceRoleC49AFD41",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile-notifications/CODE/footballnotificationslambda/footballnotificationslambda.jar",
        },
        "Description": "Send Goal Alert notifications",
        "Environment": {
          "Variables": {
            "APP": "footballnotificationslambda",
            "App": "footballnotificationslambda",
            "STACK": "mobile-notifications",
            "STAGE": "CODE",
            "Stack": "mobile-notifications",
            "Stage": "CODE",
          },
        },
        "FunctionName": "mobile-notifications-footballnotificationslambda-CODE",
        "Handler": "com.gu.mobile.notifications.football.Lambda::handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "footballnotificationslambdaLambdaServiceRoleC49AFD41",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "footballnotificationslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "footballnotificationslambdaLambdaServiceRoleC49AFD41": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "footballnotificationslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "footballnotificationslambdaLambdaServiceRoleDefaultPolicyC7DC4E99": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile-notifications/CODE/footballnotificationslambda/footballnotificationslambda.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/footballnotificationslambda",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/footballnotificationslambda/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/footballnotificationslambda/CODE/mobile-notifications",
                  ],
                ],
              },
            },
            {
              "Action": [
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:Query",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:dynamodb:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":table/mobile-notifications-football-notifications-CODE",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "footballnotificationslambdaLambdaServiceRoleDefaultPolicyC7DC4E99",
        "Roles": [
          {
            "Ref": "footballnotificationslambdaLambdaServiceRoleC49AFD41",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "footballnotificationslambdaLambdafootballnotificationslambdaLambdacron04F9F42CE": {
      "Properties": {
        "ScheduleExpression": "cron(* * * * ? *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "footballnotificationslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "footballnotificationslambdaLambda45CD1697",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "footballnotificationslambdaLambdafootballnotificationslambdaLambdacron0AllowEventRuleFootballNotificationsLambdaCODEfootballnotificationslambdaLambda450F0F04C6E5C922": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "footballnotificationslambdaLambda45CD1697",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "footballnotificationslambdaLambdafootballnotificationslambdaLambdacron04F9F42CE",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;

exports[`The FootballNotificationsLambda stack matches the snapshot for PROD 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "mobile-notifications-football",
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "App": {
      "Default": "football",
      "Description": "Application name",
      "Type": "String",
    },
    "DeployBucket": {
      "Default": "mobile-dist",
      "Description": "Bucket where RiffRaff uploads artifacts on deploy",
      "Type": "String",
    },
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "DynamoNotificationTopic": {
      "Description": "SNS topic to notify when there's a dynamo throttling event",
      "Type": "String",
    },
    "Stack": {
      "Default": "mobile-notifications",
      "Description": "Stack name",
      "Type": "String",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Default": "CODE",
      "Description": "Stage name",
      "Type": "String",
    },
  },
  "Resources": {
    "DynamoTable": {
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "notificationId",
            "AttributeType": "S",
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "notificationId",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 3,
          "WriteCapacityUnits": 3,
        },
        "TableName": {
          "Fn::Sub": "\${Stack}-\${App}-notifications-\${Stage}",
        },
        "Tags": [
          {
            "Key": "devx-backup-enabled",
            "Value": "true",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TimeToLiveSpecification": {
          "AttributeName": "ttl",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
    },
    "ErrorEventMetricFilter9872E3AE": {
      "Properties": {
        "FilterPattern": "Error",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballnotificationslambdaLambda45CD1697",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "error",
            "MetricNamespace": "PROD/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "GoalEventMetricFilterAD6B9DEF": {
      "Properties": {
        "FilterPattern": "successfully sent",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballnotificationslambdaLambda45CD1697",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "goal-success",
            "MetricNamespace": "PROD/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "MobileNotificationsFootballConsumedReadThrottleEvents9A50CD73": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":dynamodb",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if DynamoDB ReadThrottleEvents >= 10 in 5 minutes",
        "AlarmName": "MobileNotificationsFootballConsumedReadThrottleEvents",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": "mobile-notifications-football-notifications-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ReadThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MobileNotificationsFootballConsumedWriteThrottleEventsC10BA6FC": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":dynamodb",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if DynamoDB WriteThrottleEvents >= 10 in 5 minutes",
        "AlarmName": "MobileNotificationsFootballConsumedWriteThrottleEvents",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "TableName",
            "Value": "mobile-notifications-football-notifications-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "WriteThrottleEvents",
        "Namespace": "AWS/DynamoDB",
        "Period": 300,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
        "Unit": "Count",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "footballnotificationslambdaLambda45CD1697": {
      "DependsOn": [
        "footballnotificationslambdaLambdaServiceRoleDefaultPolicyC7DC4E99",
        "footballnotificationslambdaLambdaServiceRoleC49AFD41",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile-notifications/PROD/footballnotificationslambda/footballnotificationslambda.jar",
        },
        "Description": "Send Goal Alert notifications",
        "Environment": {
          "Variables": {
            "APP": "footballnotificationslambda",
            "App": "footballnotificationslambda",
            "STACK": "mobile-notifications",
            "STAGE": "PROD",
            "Stack": "mobile-notifications",
            "Stage": "PROD",
          },
        },
        "FunctionName": "mobile-notifications-footballnotificationslambda-PROD",
        "Handler": "com.gu.mobile.notifications.football.Lambda::handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "footballnotificationslambdaLambdaServiceRoleC49AFD41",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "footballnotificationslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "footballnotificationslambdaLambdaServiceRoleC49AFD41": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "footballnotificationslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "footballnotificationslambdaLambdaServiceRoleDefaultPolicyC7DC4E99": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile-notifications/PROD/footballnotificationslambda/footballnotificationslambda.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/footballnotificationslambda",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/footballnotificationslambda/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/footballnotificationslambda/PROD/mobile-notifications",
                  ],
                ],
              },
            },
            {
              "Action": [
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:Query",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:dynamodb:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":table/mobile-notifications-football-notifications-PROD",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "footballnotificationslambdaLambdaServiceRoleDefaultPolicyC7DC4E99",
        "Roles": [
          {
            "Ref": "footballnotificationslambdaLambdaServiceRoleC49AFD41",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "footballnotificationslambdaLambdafootballnotificationslambdaLambdacron04F9F42CE": {
      "Properties": {
        "ScheduleExpression": "cron(* * * * ? *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "footballnotificationslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "footballnotificationslambdaLambda45CD1697",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "footballnotificationslambdaLambdafootballnotificationslambdaLambdacron0AllowEventRuleFootballNotificationsLambdaPRODfootballnotificationslambdaLambda966AAB8E246F768A": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "footballnotificationslambdaLambda45CD1697",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "footballnotificationslambdaLambdafootballnotificationslambdaLambdacron04F9F42CE",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
